Added section office bearers. Fixed overall responsiveness. Added scroll to section feature when navbar item is clicked. Added section headings for contact, schools, gallery. Added overlay image mary over slideshow.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="scroll-behavior: smooth;">
 
 <head>
     <meta charset="UTF-8" />
@@ -13,9 +13,9 @@
     <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png" />
-    <link rel="manifest" href="/site.webmanifest" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
+    <link rel="stylesheet" href="style.css">
 
     <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script> -->
 </head>
@@ -67,7 +67,7 @@
                             class="col-md-5 col-sm-5 text-white text-start text-nowrap-sm mt-md-2 mt-lg-2 fs-6-sm ms-sm-3 ms-2">
                             <h1>MJSSA KURUPPAMPADY DISTRICT</h1>
                         </div>
-                        <div class="col-md-4 col-sm-6 text-white text-nowrap mt-md-4 text-center mt-sm-4">
+                        <div class="col-md-4 col-lg-3 col-sm-6 text-white text-nowrap mt-md-4 text-center mt-sm-4">
                             <h4>PERUMBAVOOR ZONE</h4>
                             <p class="fs-6 mt-1 text-white">Under St.Marys Jacobite Syrian Cathedral, <br
                                     class="d-none d-sm-block d-md-block"> Kuruppampady</p>
@@ -83,24 +83,27 @@
         style="z-index: 2; padding-top: 11rem;padding-left: 1rem;">
         <div class="row">
             <div class="col-md-4  col-xs-4">
-                <img src="images\president.png" class="img-responsive" style="max-width: 80%;" />
+                <img src="images\mary.png" class="img-responsive" style="max-width: 80%;" />
             </div>
         </div>
     </div>
 
     <!-- SlideShow -->
-    <section class="">
+    <section class="" id="section-slideshow">
         <div id="carouselExampleFade" class="carousel slide carousel-fade mx-auto" data-bs-ride="carousel">
 
             <div class="carousel-inner ">
                 <div class="carousel-item active ">
-                    <img src="images\slide1.png" class="d-block w-100 " data-bs-interval="1500" alt="Slideshow Image" />
+                    <img src="images\slideshow\slide1.png" class="d-block w-100 " data-bs-interval="1500"
+                        alt="Slideshow Image" />
                 </div>
                 <div class="carousel-item ">
-                    <img src="images\slide2.png" class="d-block w-100" data-bs-interval="1500" alt="Slideshow Image" />
+                    <img src="images\slideshow\slide2.png" class="d-block w-100" data-bs-interval="1500"
+                        alt="Slideshow Image" />
                 </div>
                 <div class="carousel-item ">
-                    <img src="images\slide3.jpg" class="d-block w-100" data-bs-interval="1500" alt="Slideshow Image" />
+                    <img src="images\slideshow\slide3.jpg" class="d-block w-100" data-bs-interval="1500"
+                        alt="Slideshow Image" />
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
@@ -120,7 +123,7 @@
     <section class="sticky-top bg-info-subtle">
         <div class="row sticky-top">
             <div class="col-md-12 ">
-                <nav class="navbar navbar-expand navbar-light float-end me-2  ">
+                <nav class="navbar navbar-expand navbar-light float-end me-2  mt-0">
                     <!--<div class="container-fluid">
             <button
               class="navbar-toggler"
@@ -143,16 +146,31 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About Us</a>
+                            <a class="nav-link" href="#section-about">About Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Activities</a>
+                            <a class="nav-link" href="#section-office">Activities</a>
+                        </li>
+                        <li class="nav-item dropdown ">
+                            <a class="nav-link  dropdown-toggle" href="#" data-bs-toggle="dropdown"> Schools </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#section-schools"> MGM Aimury</a></li>
+                                <li><a class="dropdown-item" href="#section-schools"> MGM Kuruppampady </a></li>
+                                <li><a class="dropdown-item" href="#section-schools"> MKM Iringole</a></li>
+                                <li><a class="dropdown-item" href="#section-schools"> MGM Aimury</a></li>
+                                <li><a class="dropdown-item" href="#section-schools"> MGM Kuruppampady </a></li>
+                                <li><a class="dropdown-item" href="#section-schools"> MKM Iringole</a></li>
+                                <li><a class="dropdown-item" href="#section-schools"> MGM Aimury</a></li>
+                                <li><a class="dropdown-item" href="#section-schools"> MGM Kuruppampady </a></li>
+                                <li><a class="dropdown-item" href="#section-schools"> MKM Iringole</a></li>
+                                <li><a class="dropdown-item" href="#section-schools"> MKM Iringole</a></li>
+                            </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Gallery</a>
+                            <a class="nav-link" href="#section-gallery">Gallery</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact Us</a>
+                            <a class="nav-link" href="#section-contact">Contact Us</a>
                         </li>
                     </ul>
                     <!-- </div>
@@ -163,7 +181,7 @@
 
     </section>
     <!-- About Us -->
-    <section class="about-section ">
+    <section class="about-section mt-5" id="section-about">
         <article>
             <h1 class="text-center">About Us</h1>
             <div>
@@ -215,13 +233,13 @@
 
     <!-- Our Patrons -->
 
-    <section class="bg-light mt-3 ">
+    <section class="bg-light mt-3">
         <div class="container-fluid ">
             <h1 class="text-center">Our Patrons</h1>
             <div class="row p-4 align-items-center ms-5 ">
                 <div class="col-md-6 col-sm-6 mt-2 col-12 col-lg-3 ">
-                    <div class="card  p-3 " style="width: 16rem; height: 26rem">
-                        <img src="images\patriarch.png" class="card-img-top img-fluid img-responsive" alt="" />
+                    <div class="card  p-3 shadow" style="width: 16rem; height: 26rem">
+                        <img src="images\patrons\patriarch.png" class="card-img-top img-fluid img-responsive" alt="" />
                         <div class="card-body">
                             <h5 class="card-text">H.H Moran Mor Ignatius Aphrem II</h5>
                             <p style="font-weight: bold">SUPREME PATRON</p>
@@ -229,10 +247,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-sm-6 mt-3 col-12 col-lg-3  single-post-area wow fadeInUp"
-                    data-wow-delay="300ms">
-                    <div class="card text-center p-3 " style="width: 16rem; height: 26rem">
-                        <img src="images\catholica.png" class="card-img-top img-fluid img-responsive " alt="" />
+                <div class="col-md-6 col-sm-6 mt-3 col-12 col-lg-3">
+                    <div class="card text-center p-3 shadow" style="width: 16rem; height: 26rem">
+                        <img src="images\patrons\catholica.png" class="card-img-top img-fluid img-responsive " alt="" />
                         <div class="card-body">
                             <h5 class="card-text">H.B Baselious Thomas I</h5>
                             <p style="font-weight: bold">PATRON</p>
@@ -241,8 +258,8 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-6 mt-3 col-12 col-lg-3">
-                    <div class="card text-center p-3" style="width: 16rem; height: 26rem">
-                        <img src="images\president.png" class="card-img-top img-fluid img-responsive " alt="" />
+                    <div class="card text-center p-3 shadow" style="width: 16rem; height: 26rem">
+                        <img src="images\patrons\president.png" class="card-img-top img-fluid img-responsive " alt="" />
                         <div class="card-body">
                             <h5 class="card-text">H.G Mor Anthimos Mathews</h5>
                             <p>MJSSA President</p>
@@ -250,8 +267,9 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-6 mt-3 col-12 col-lg-3">
-                    <div class="card text-center p-3" style="width: 16rem; height: 26rem">
-                        <img src="images\pbvrMetropolitan.png" class="card-img-top img-fluid img-responsive" alt="" />
+                    <div class="card text-center p-3 shadow" style="width: 16rem; height: 26rem">
+                        <img src="images\patrons\pbvrMetropolitan.png" class="card-img-top img-fluid img-responsive"
+                            alt="" />
                         <div class="card-body">
                             <h5 class="card-text">H.G Mor Aphrem Mathews</h5>
                             <p>Metropolitan of Perumbavoor Region, Angamaly Diocese</p>
@@ -263,10 +281,110 @@
     </section>
 
     <!-- Office Bearers -->
-    <section class="">
+    <section class="" id="section-office">
+
+        <div class="container p-2">
+            <h1 class="text-center">Office Bearers</h1>
+
+            <div class="row p-4 text-end">
+                <div class="col-6 col-md-6 p-2 col-sm-6 me-md-0  float-end">
+                    <div class="row text-end ">
+                        <div class="col-md-6 col-sm-12 col-12 float-end  me-md-0 ms-0">
+                            <img src="images\patrons\patriarch.png" class=" img-fluid rounded-circle  w-75 " alt="">
+                        </div>
+                        <div class=" ms-md-0 col-sm-12 col-md-6 col-12 container float-start text-start  mt-4 ms-5 ">
+                            <h4 style="margin-bottom:0;">K.P Yohanan</h4>
+                            <p class="lh-sm text-danger-emphasis fw-bold"
+                                style="margin-bottom:0; margin : 0; padding-top:0;">District Inspector</p>
+                            <p class="lh-sm" style="margin-bottom:0; margin : 0; padding-top:0;">MKM Iringole</p>
+                            <a href="tel:+9656255604"><i class="fa-solid fa-phone text-black ms-3 me-3"></i></a>
+                            <a href="http://wa.me/919656255604" target="_blank"><i
+                                    class="fa-brands fa-whatsapp text-black ms-1"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 col-md-6 col-sm-6 p-2 ms-md-0 float-start  mt-md-0 ">
+                    <div class="row text-end">
+                        <div class="col-md-6 col-sm-12 col-12 float-end me-md-0 me-sm-5 ms-0">
+                            <img src="images\patrons\patriarch.png" class="img-fluid rounded-circle  w-75" alt="">
+                        </div>
+                        <div class=" ms-md-0 col-sm-12 col-md-6 col-12 container float-start text-start mt-4 ms-5">
+                            <h4 style="margin-bottom:0;">K.P Yohanan</h4>
+                            <p class="lh-sm text-danger-emphasis fw-bold"
+                                style="margin-bottom:0; margin : 0; padding-top:0;">Asst. Inspector</p>
+                            <p class="lh-sm" style="margin-bottom:0; margin : 0; padding-top:0;">MKM Iringole</p>
+                            <a href="tel:+9656255604"><i class="fa-solid fa-phone text-black ms-3 me-3"></i></a>
+                            <a href="http://wa.me/919656255604" target="_blank"><i
+                                    class="fa-brands fa-whatsapp text-black ms-1"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="row p-4 mt-0 text-end">
+                <div class="col-6 col-md-6 p-2 col-sm-6 me-md-0  float-end">
+                    <div class="row text-end ">
+                        <div class="col-md-6 col-sm-12 col-12 float-end  me-md-0 ms-0">
+                            <img src="images\patrons\patriarch.png" class=" img-fluid rounded-circle  w-75 " alt="">
+                        </div>
+                        <div class=" ms-md-0 col-sm-12 col-md-6 col-12 container float-start text-start  mt-4 ms-5 ">
+                            <h4 style="margin-bottom:0;">Amal Varghese</h4>
+                            <p class="lh-sm text-danger-emphasis fw-bold"
+                                style="margin-bottom:0; margin : 0; padding-top:0;">Secretary</p>
+                            <p class="lh-sm" style="margin-bottom:0; margin : 0; padding-top:0;">MGM Kuruppampady</p>
+                            <a href="tel:+9656255604"><i class="fa-solid fa-phone text-black ms-3 me-3"></i></a>
+                            <a href="http://wa.me/919656255604" target="_blank"><i
+                                    class="fa-brands fa-whatsapp text-black ms-1"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 col-md-6 col-sm-6 p-2 ms-md-0 float-start  mt-md-0 ">
+                    <div class="row text-end">
+                        <div class="col-md-6 col-sm-12 col-12 float-end me-md-0 me-sm-5 ms-0">
+                            <img src="images\patrons\patriarch.png" class="img-fluid rounded-circle  w-75" alt="">
+                        </div>
+                        <div class=" ms-md-0 col-sm-12 col-md-6 col-12 container float-start text-start mt-4 ms-5">
+                            <h4 style="margin-bottom:0;">K.P Yohanan</h4>
+                            <p class="lh-sm text-danger-emphasis fw-bold"
+                                style="margin-bottom:0; margin : 0; padding-top:0;">Joint Secretary</p>
+                            <p class="lh-sm" style="margin-bottom:0; margin : 0; padding-top:0;">MKM Iringole</p>
+                            <a href="tel:+9656255604"><i class="fa-solid fa-phone text-black ms-3 me-3"></i></a>
+                            <a href="http://wa.me/919656255604" target="_blank"><i
+                                    class="fa-brands fa-whatsapp text-black ms-1"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
+
+
+    <!-- Sunday Schools -->
+    <section class="bg-light" id="section-schools">
 
         <div class="container-fluid ">
-            <h1 class="text-center">Office Bearers</h1>
+            <h1 class="text-center">Sunday Schools</h1>
+        </div>
+
+    </section>
+
+    <!-- Contact Us -->
+    <section class="" id="section-contact">
+
+        <div class="container-fluid ">
+            <h1 class="text-center">Contact Us</h1>
+        </div>
+
+    </section>
+
+    <!-- Gallery -->
+    <section class="bg-light" id="section-gallery">
+
+        <div class="container-fluid ">
+            <h1 class="text-center">Gallery</h1>
         </div>
 
     </section>
@@ -279,10 +397,11 @@
                     <div class="col-12 col-md-9">
 
                         <div class="copywrite-text text-center text-white ">
-                            <p>Copyright &copy; 2023 MJSSA KURUPPAMPADY. All rights reserved.</p>
+                            <p style="margin-bottom: 0%;">Copyright &copy; 2023 MJSSA KURUPPAMPADY. All rights reserved.
+                            </p>
                         </div>
                     </div>
-                    <div class="col-12 col-md-3 mb-sm-2">
+                    <div class="col-12 col-md-3 mb-sm-2 mb-3 ">
 
                         <div class="social-info">
                             <a class="text-white me-4 fs-5 " href="https://wa.me/919656255604" target="_blank"><i
@@ -299,7 +418,9 @@
         </div>
 
     </footer>
-    <!-- Footer Area End -->
+
+
+    <!-- Scripts -->
     <script src="https://kit.fontawesome.com/4597139363.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
