Added title to Navbar. section-offcie text set to center when sm else left align.

--- a/index.html
+++ b/index.html
@@ -121,9 +121,15 @@
 
     <!-- Nav Bar -->
     <section class="sticky-top bg-info-subtle">
-        <div class="row sticky-top">
-            <div class="col-md-12 ">
-                <nav class="navbar navbar-expand navbar-light float-end me-2  mt-0">
+        <div class="row bg-info-subtle" style="margin: auto">
+            <div class="col text-start  ">
+                <div class="container align-items-center justify-content-center">
+                    <h4 class="mt-2 " style="color:  rgb(2, 84, 104);;">MJSSA Kuruppampady District</h4>
+                </div>
+                
+            </div>
+            <div class="col-md-8 ">
+                <nav class="navbar navbar-expand navbar-light float-end   mt-0">
                     <!--<div class="container-fluid">
             <button
               class="navbar-toggler"
@@ -181,7 +187,7 @@
 
     </section>
     <!-- About Us -->
-    <section class="about-section mt-5" id="section-about">
+    <section class="about-section mt-2" id="section-about">
         <article>
             <h1 class="text-center">About Us</h1>
             <div>
@@ -234,15 +240,15 @@
     <!-- Our Patrons -->
 
     <section class="bg-light mt-3">
-        <div class="container-fluid ">
+        <div class="container-fluid">
             <h1 class="text-center">Our Patrons</h1>
-            <div class="row p-4 align-items-center ms-5 ">
+            <div class="row p-4 justify-content-center r ">
                 <div class="col-md-6 col-sm-6 mt-2 col-12 col-lg-3 ">
                     <div class="card  p-3 shadow" style="width: 16rem; height: 26rem">
                         <img src="images\patrons\patriarch.png" class="card-img-top img-fluid img-responsive" alt="" />
-                        <div class="card-body">
+                        <div class="card-body text-center ">
                             <h5 class="card-text">H.H Moran Mor Ignatius Aphrem II</h5>
-                            <p style="font-weight: bold">SUPREME PATRON</p>
+                            <p style="font-weight: bold" >SUPREME PATRON</p>
                             <p>Patriarch of Antioch and All the East</p>
                         </div>
                     </div>
@@ -292,7 +298,7 @@
                         <div class="col-md-6 col-sm-12 col-12 float-end  me-md-0 ms-0">
                             <img src="images\patrons\patriarch.png" class=" img-fluid rounded-circle  w-75 " alt="">
                         </div>
-                        <div class=" ms-md-0 col-sm-12 col-md-6 col-12 container float-start text-start  mt-4 ms-5 ">
+                        <div class=" ms-md-0 col-sm-12 col-md-6 col-12 container float-start text-center text-md-start mt-4 ms-4 ">
                             <h4 style="margin-bottom:0;">K.P Yohanan</h4>
                             <p class="lh-sm text-danger-emphasis fw-bold"
                                 style="margin-bottom:0; margin : 0; padding-top:0;">District Inspector</p>
@@ -308,7 +314,7 @@
                         <div class="col-md-6 col-sm-12 col-12 float-end me-md-0 me-sm-5 ms-0">
                             <img src="images\patrons\patriarch.png" class="img-fluid rounded-circle  w-75" alt="">
                         </div>
-                        <div class=" ms-md-0 col-sm-12 col-md-6 col-12 container float-start text-start mt-4 ms-5">
+                        <div class=" ms-md-0 col-sm-12 col-md-6 col-12 container float-start text-center text-md-start mt-4 ms-4">
                             <h4 style="margin-bottom:0;">K.P Yohanan</h4>
                             <p class="lh-sm text-danger-emphasis fw-bold"
                                 style="margin-bottom:0; margin : 0; padding-top:0;">Asst. Inspector</p>
@@ -327,7 +333,7 @@
                         <div class="col-md-6 col-sm-12 col-12 float-end  me-md-0 ms-0">
                             <img src="images\patrons\patriarch.png" class=" img-fluid rounded-circle  w-75 " alt="">
                         </div>
-                        <div class=" ms-md-0 col-sm-12 col-md-6 col-12 container float-start text-start  mt-4 ms-5 ">
+                        <div class=" ms-md-0 col-sm-12 col-md-6 col-12 container float-start text-center text-md-start  mt-4 ms-4 ">
                             <h4 style="margin-bottom:0;">Amal Varghese</h4>
                             <p class="lh-sm text-danger-emphasis fw-bold"
                                 style="margin-bottom:0; margin : 0; padding-top:0;">Secretary</p>
@@ -343,7 +349,7 @@
                         <div class="col-md-6 col-sm-12 col-12 float-end me-md-0 me-sm-5 ms-0">
                             <img src="images\patrons\patriarch.png" class="img-fluid rounded-circle  w-75" alt="">
                         </div>
-                        <div class=" ms-md-0 col-sm-12 col-md-6 col-12 container float-start text-start mt-4 ms-5">
+                        <div class=" ms-md-0 col-sm-12 col-md-6 col-12 container float-start text-center text-md-start mt-4 ms-4">
                             <h4 style="margin-bottom:0;">K.P Yohanan</h4>
                             <p class="lh-sm text-danger-emphasis fw-bold"
                                 style="margin-bottom:0; margin : 0; padding-top:0;">Joint Secretary</p>
